--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
